<resources>
    <string name="app_name">Google</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="search_term">Define the term \"Baseball\"</string>
    <string name="search">Search</string>
    <string name="icon">Icon</string>
    <string name="discover">Discover</string>
    <string name="collections">Collections</string>
    <string name="weather_report">Weather Report</string>
    <string name="weather_report_text">Here you will find weather report of the current day</string>
    <string name="mic">Mic</string>
</resources>