<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ScreenCollections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/collections"
            android:textStyle="bold"
            android:textColor="@color/light_grey"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ScreenDiscover"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="end"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_picture"/>

        </LinearLayout>

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:scaleType="fitStart"
            android:src="@drawable/google_logo" />

        <LinearLayout
            android:id="@+id/Search"
            android:focusable="true"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/search_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_baseline_search_24" />

            <TextView
                android:textColor="@color/light_grey"
                android:textSize="15.5sp"
                android:gravity="center_vertical"
                android:text="@string/search_term"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:focusable="true"
                android:clickable="true"
                android:padding="10dp"
                android:background="@drawable/mic_background"
                android:contentDescription="@null"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_mic_24"
                android:layout_marginEnd="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/weather_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_cloud_24"
                android:contentDescription="@null"/>

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_report"/>

                <TextView
                    android:layout_marginTop="3dp"
                    android:textSize="13sp"
                    android:textColor="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_report_text"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/TabDiscover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/option_enabled"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/TabDiscoverIcon"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/star_enabled" />

            <TextView
                android:id="@+id/TabDiscoverText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover"
                android:textColor="@color/white"
                android:textSize="12.5sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TabSearch"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/option_disabled"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/TabSearchIcon"
                android:src="@drawable/ic_baseline_search_24"
                android:contentDescription="@string/icon"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:id="@+id/TabSearchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12.5sp"
                android:textColor="@color/icon_color_disable"
                android:text="@string/search"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TabCollections"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/option_disabled"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/TabCollectionsIcon"
                android:src="@drawable/collections_disabled"
                android:contentDescription="@string/icon"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:id="@+id/TabCollectionsText"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12.5sp"
                android:textColor="@color/icon_color_disable"
                android:text="@string/collections"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>